# EbfTradingUI

./: .gitignore  README.md  pyproject.toml
resources/specs/: excel form.docx
src/ebf_trading_ui/forms/dev/: trade_entry_form_demo.py
src/ebf_trading_ui/forms/option_entry/: trade_entry_form.py  trade_entry_form.ui  ui_trade_entry.py  ui_trade_entry_form.py
src/ebf_trading_ui/forms/trade_entry/: trade_entry_form.py  trade_entry_form.ui  trade_entry_form_backup.ui  ui_trade_entry_form.py
src/ebf_trading_ui/view_models/: position_spec.py  trade_entry_view_model.py
src/ebf_trading_ui/view_models/ports/: null_trade_record.py  trade_record.py
tests/forms/option_entry/: test_trade_entry_form.py
tests/forms/trade_entry/: test_trade_entry_form.py
tests/view_models/: test_position_spec.py
